# WingHexExplorer2

./: .clang-format  .cmake-format.py  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  SECURITY.md  TODO.txt  _config.yml  about.md  docs.md  favicon.rc  index.md  main.cpp  posts.md  resource.h  resources.qrc
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang-format-check.yml  cmake-format-check.yml  conventional-commit-check-pr.yml  conventional-commit-check-push.yml  jekyll-gh-pages.yml  qt-build-release-linux.yml  qt-build-release-win.yml  qt-build-test.yml  reademe-contributors.yml
QCodeEditor/: CMakeLists.txt
QConsoleWidget/: CMakeLists.txt
QConsoleWidget/src/: QConsoleIODevice.cpp  QConsoleWidget.cpp
QHexView/: CMakeLists.txt  define.h  qhexview.cpp  qhexview.h
QHexView/QHexEdit2/: chunks.h
QHexView/document/: qhexdocument.cpp  qhexdocument.h  qhexmetadata.cpp  qhexrenderer.cpp  qhexrenderer.h
QJsonModel/include/: QJsonModel.hpp
QLogger/: consoleoutput.cpp
QPathEdit/: qpathedit.cpp  qpathedit.h
QScintilla/: CMakeLists.txt
QScintilla/scintilla/src/: Catalogue.cpp
QWingRibbon/: ribbon.cpp  ribbon.h  ribbonbuttongroup.ui  ribbontabcontent.h  ribbontabcontent.ui
ShareMemoryDrv/: CMakeLists.txt  ShareMemoryDrv.json  resources.qrc  sharedmemory.cpp  sharedmemory.h  sharememorydrv.cpp  sharememorydrv.h
ShareMemoryDrv/lang/: ShareMemoryDrv_zh_CN.ts  shmem_zh_CN.ts
TestBadPlugin/: CMakeLists.txt  TestBadPlugin.json  testbadplugin.cpp  testbadplugin.h
TestDepPlugin/: CMakeLists.txt  TestDepPlugin.json  testdepplugin.cpp  testdepplugin.h
TestHexExt/: CMakeLists.txt  TestHexExt.json  testhexext.cpp  testhexext.h
TestManager/: CMakeLists.txt  TestManager.json  testmanager.cpp  testmanager.h
TestPlugin/: CMakeLists.txt  README.md  TestPlugin.json  ctltestform.cpp  ctltestform.h  ctltestform.ui  qchecklist.cpp  qchecklist.h  readertestform.cpp  readertestform.h  readertestform.ui  resources.qrc  testform.cpp  testform.h  testform.ui  testplugin.cpp  testplugin.h  testpluginpage.cpp  testpluginpage.h  testsettingpage.cpp  testsettingpage.h  testtablemodel.cpp  testtablemodel.h  testwingeditorviewwidget.cpp  testwingeditorviewwidget.h
TestPlugin/cmake/: TranslationUtils.cmake
TestPlugin/lang/: TestPlugin_zh_CN.ts
WingPlugin/: CMakeLists.txt  iwingdevice.cpp  iwingdevice.h  iwingplugin.cpp  iwingplugin.h  iwingpluginbase.cpp  iwingpluginbase.h  iwingpluginbasecalls.cpp  iwingpluginbasecalls.h  iwingplugincalls.cpp  iwingplugincalls.h  settingpage.cpp  settingpage.h  wingcore.h  wingeditorviewwidget.cpp  wingeditorviewwidget.h  wingplugin_global.h  wingplugincallconvertor.cpp  wingplugincallconvertor.h  wingplugincalls.cpp  wingplugincalls.h  wingplugincalls_p.h  wingpluginwidget.cpp  wingpluginwidget.h
_data/: licenses.yml  locale.yml  navigation.yml
_docs/zh/: 01-credits.md  02-intro.md  03-basis.md  04-workspace.md  05-fileop-basis.md  06-find-replace.md  07-mark.md  08-window.md  09-plugin-usage.md  10-settings.md  11-script-ide.md  11-script-setting.md  12-script-angelscript.md  13-script-grammar.md  14-script-expression.md  15-script-data-type.md  16-script-class-interface.md  17-script-pri-op.md  18-script-handle.md  19-script-obj.md  20-script-stl.md  21-script-reader.md  22-script-ctl.md  23-script-ui.md  (+9 more)
_includes/: article-section-navigator.html
_layouts/: single.html
_posts/: 2024-06-30-source-open-raw.md  2024-07-09-csdn-steal-code.md  2024-07-13-20240713devlog.md  2024-07-20-20240720devlog.md  2024-08-03-20240803devlog.md  2024-08-11-20240811devlog.md  2024-08-16-20240816devlog.md  2024-08-22-20240822devlog.md  2024-08-31-20240831devlog.md  2024-09-08-20240908devlog.md  2024-09-14-20240914devlog.md  2024-09-21-20240921devlog.md  2024-10-20-20241020devlog.md  2024-10-31-20241031devlog.md  2024-11-09-20241109devlog.md  2024-11-17-20241117devlog.md  2024-11-23-20241123devlog.md  2024-11-30-20241130devlog.md  2024-12-07-20241207devlog.md  2024-12-14-20241214devlog.md  2024-12-23-20241223devlog.md  2025-01-21-20250121devlog.md  2025-02-16-20250216devlog.md  2025-03-02-20250302devlog.md  2025-03-29-20250329devlog.md  2025-05-02-20250502devlog.md  2025-05-11-20250511devlog.md  2025-10-06-20251006devlog.md  2025-11-02-20251102devlog.md  2025-11-30-20251130devlog.md  2026-01-01-20260101devlog.md  2026-02-14-20260214devlog.md  2026-03-22-20260322devlog.md  2026-04-26-20260426devlog.md  2026-05-31-20260531devlog.md
_sass/: custom.scss
assets/: browserconfig.xml
docs/: DocsIndex.md
lang/: README.md  ws_zh_CN.ts
mkinstaller/: config.ini  requirements.txt  wingcert.py
qt-template/: README.md  qt-template-installer.py
qt-template/winghexplugin/: .cmake-format.py  CMakeLists.txt  MyPlugin.json.in  git.ignore  lib.cpp  lib.h  wizard.json
qt-template/winghexplugin/cmake/: TranslationUtils.cmake
src/: LICENSE.md  README.md  TESTCODE.as  WingCloudStudio.crt  WingPlugin.cmake  angelscript.xml  components.md  dbghelper.h  define.h  framelesswindow.h  predefgen.h  translist.md  utilities.h
test/: CopyAsCArray.as  TestHeader.h  TestHeaderReader.as  WinNTPE.h  any_dictionaryValue.as  array_forloop.as  array_sort_reverse.as  array_sort_with_less.as  clipboard_binary.as  clipboard_debug_log.as  color_construction.as  color_conversion.as  color_extra.as  color_setters_getters.as  colordlg_test.as  complex_and_any.as  complex_extra.as  coroutine_dictionary_context.as  coroutine_simple.as  datetime_set.as  datetime_tests.as  dictionary_basic.as  env_tests.as  fp_math_tests.as  grid_tests.as  inputbox_variants.as  json_array.as  json_basic.as  json_doc_tests.as  json_value_variants.as  log_trace_debug.as  math_fp_conv.as  msgbox_buttons_variants.as  msgbox_calls.as  optbox_json.as  peparser.as  print_exec_invoke.as  print_variadic.as  readPEImport.as  regex_basic.as  (+7 more)
test/TestStructGen/: CMakeLists.txt  TestHeader.h  main.cpp
theme/: breeze.qrc
(+559 files in other folders)
